--- a/CSS/projeto/styles.css
+++ b/CSS/projeto/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +6,12 @@
 }
 
 header {
-    margin: 44px 0px 144px 76px;
+    margin: 44px 0px 124px 76px;
+}
+
+a,
+button {
+    cursor: pointer;
 }
 
 a {
@@ -31,6 +34,52 @@ a {
     color: #FFFFFF;
 }
 
-a, button{
-    cursor: pointer;
+section, figure{
+    display: inline-block;
+}
+
+figure {
+    width: 568px;
+    height: 500px;
+    margin-left: 125px;
+    margin-right: 86px;
+   
+}
+
+h1 {
+    font-weight: 900;
+    font-size: 100px;
+    line-height: 122px;
+    color: #515151;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 58px;
+    line-height: 71px;
+    color: #515151;
+    margin-bottom: 32px;
+}
+
+p {
+    width: 515px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #848484;
+    margin-bottom: 65px;
+    text-align: justify;
+}
+
+#button-explore {
+    width: 239px;
+    height: 64px;
+    background: #ADFF00;
+    border-radius: 35px;
+    border: none;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    color: #000000;
+    box-shadow: -0.5px 1px 5px #3a3a3a; /* Mesma configuração de "text-shadow, mas para elementos que não são textos */
 }
