--- a/CSS/desafio/styles.css
+++ b/CSS/desafio/styles.css
@@ -5,11 +5,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
-header{
+header {
     margin: 47px 0px 163px 42px;
 }
 
-.header-menu {
+.header-link {
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
@@ -30,4 +30,44 @@ button {
     line-height: 24px;
     letter-spacing: 1px;
     color: #FFFFFF;
+}
+
+figure,
+section {
+    display: inline-block;
+}
+
+figure {
+    width: 595px;
+    height: 500px;
+    margin-left: 121px;
+    margin-right: 85px;
+}
+
+h1 {
+    width: 582px;
+    font-weight: 700;
+    font-size: 62px;
+    line-height: 82px;
+    letter-spacing: 0.596154px;
+    color: #161A49;
+    margin-bottom: 47px;
+}
+
+p {
+    width: 493px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 33px;
+    letter-spacing: 0.5px;
+    color: #4B505A;
+    margin-bottom: 55px;
+}
+
+#section-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 1px;
+    color: #6FBF44;    
 }
