--- a/CSS/projetos/Projeto 2 - Easy Shopping/styles.css
+++ b/CSS/projetos/Projeto 2 - Easy Shopping/styles.css
@@ -36,7 +36,6 @@ h1 {
     width: 368px;
     font-size: 70px;
     line-height: 80px;
-
 }
 
 p {
@@ -45,6 +44,7 @@ p {
     line-height: 48px;
     opacity: 0.6;
     margin: 15px 0px;
+    text-align: justify;
 }
 
 button {
@@ -80,8 +80,8 @@ section {
     /* rgba permite colocar um fundo com opacidade sem interferir nos outros elementos */
     height: 100%;
     position: absolute;
-    right: 0px;
-    width: 35vw;
+    right: 0;
+    width: 35%;
 }
 
 header {
@@ -105,55 +105,149 @@ a:active {
 }
 
 img {
-    position: relative;
-    top: 125px;
-    right: 140px;
+    position: absolute;
+    top: 25%;
+    right: 43%;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:1200px) {
 
     main {
-        width: 0%;
-        height: 0%;
-        top: 7%;
-        left: 15%;
+        top: 35%;
+        left: 6%;
     }
-
-    section {
-        width: 100%;
-        height: 50vh;
-        bottom: 0;
-        left:0;
-    }
-
-    header {
-        display: none;
-    }
-
-    /* main */
 
     h1 {
-        width:269px;
+        font-size: 50px;
+    }
+
+    p {
+        width: 440px;
+        font-size: 18px;
+        line-height: 38px;
+    }
+
+    a {
+        font-size: 23px;
+        margin-right: 20px;
+    }
+
+    img {
+        bottom: 60%;
+        top: 36%;
+        width: 80%;
+    }
+}
+
+@media screen and (max-width:992px) {
+
+    main {
+        width: 0;
+        height: 0;
+        top: 7%;
+        left: 32%;
+    }
+
+    h1 {
+        width: 269px;
         font-size: 36px;
         line-height: 52px;
         text-align: center;
     }
 
     p {
-        width:296px;
+        width: 296px;
         font-size: 14px;
         line-height: 24px;
         text-align: center;
     }
 
-    /* section */
+    section {
+        width: 100%;
+        height: 50vh;
+        bottom: 0;
+        left: 0;
+    }
+
+    header {
+        display: none;
+    }
 
     img {
-        position: absolute;
-        left: 15%;
+        left: 32%;
         top: 10%;
         width: 271px;
         height: 322px;
+    }
+
+}
+
+@media screen and (max-width:768px) {
+
+  main{
+    padding: 40px;
+    left: 28%;
+  }
+
+  h1{  
+    font-size: 49px;
+  }
+
+  p{
+    font-size: 23px;
+    margin: 30px 0;
+  }
+
+}
+
+
+@media screen and (max-width:480px) {
+    main {
+        left: 17%;
+        top: 10%;
+    }
+
+    img {
+        left: 20%;
+        top: 10%;
+        width: 60%;
+    }
+
+}
+
+
+@media screen and (max-width:480px) and (max-height:740px) {
+    main {
+        left: 13%;
+        top: 8%;
+    }
+
+    img {
+        left: 20%;
+        top: 3%;
+        width: 60%;
+    }
+
+}
+
+@media screen and (max-width:320px) {
+
+    main {
+        top: 5%;
+        left: 10%;
+        height: 0px;
+    }
+
+    img {
+        left: 20%;
+        width: 60%;
+    }
+
+    section {
+        left: 0%;
+        top: 50%;
+        width: 320px;
+        height: 70%;
     }
 
 
