--- a/Javascript/projeto/styles.css
+++ b/Javascript/projeto/styles.css
@@ -63,6 +63,10 @@ input {
     padding-left: 16px;
 }
 
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+}
+
 select{
     cursor: pointer;
 }
