Alteração na cor dos blocos

--- a/CSS-Display-Flex/1-Inicio/styles.css
+++ b/CSS-Display-Flex/1-Inicio/styles.css
@@ -26,8 +26,8 @@ h1{
 .block{
     width: 100px;
     height: 100px;
-    background: #CDD728;
-    border: 5px solid #9758A6;
+    background: #56c1ff;
+    border: 5px solid #122cbd;
     border-radius: 5px;
     color: black;
     font-weight: bold;
