--- a/CSS-Display-Grid/Items/6-Grid row/styles.css
+++ b/CSS-Display-Grid/Items/6-Grid row/styles.css
@@ -8,6 +8,14 @@
         grid-row-end: numero da linha -> Onde termina
 
         grid-row: numero onde inicia / numero onde termina  -> Ambos
+
+    
+    Obs: Também é possivel definir seu inicio e fim baseado em sua altura 
+        (para quantas linhas irá crescer) com a palavra-chave "span", 
+        exemplo: Um container que irá ocupar 3 linhas, irá começar na 1 e terá span 2 (largura cresceu 2 linhas)
+
+        grid-row-start: 1;
+        grid-row-end: span 2;
 */
 
 *{
