--- a/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
@@ -2,8 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: white;
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
     background-image: url("https://source.unsplash.com/1600x900/?landscape");
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+main{
+    background-color: black;
+    opacity: 0.8;
+    width: 430px;
+}
+
