--- a/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
@@ -18,5 +18,43 @@ main{
     background-color: black;
     opacity: 0.8;
     width: 430px;
+    padding: 20px;
+    border-radius: 20px;
 }
+
+input {
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 24px;
+    font-size: 20px;
+    background-color: #7c7c7c2b;
+}
+
+button{
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: #7c7c7c2b;
+    float: right; /* Direciona o elemento para a direção posta, o máximo que ele conseguir */
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: #7c7c7c6b;
+}
+
+#search-img{
+    height: 20px;
+}
+
+div{
+    margin-top: 15px;
+}
+
+h2{
+    font-size: 28px;
+}
+
 
