--- a/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
+    font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -14,10 +15,13 @@ body {
     align-items: center;
 }
 
-main{
+main {
     background-color: black;
     opacity: 0.8;
-    width: 430px;
+    width: 90%; /* Irá ocupar 90% da tela (bom para a tela de celular) */
+    max-width: 430px; /* Porém terá no máximo 430px (bom para a tela do computador) */
+    height: 52%;
+    max-height: 400px;
     padding: 20px;
     border-radius: 20px;
 }
@@ -29,9 +33,10 @@ input {
     border-radius: 24px;
     font-size: 20px;
     background-color: #7c7c7c2b;
+    width: calc(100% - 50px); /* Irá ocupar 100% do espaço disponivel, menos 50px (para dar um espaço do botão) */
 }
 
-button{
+button {
     border: none;
     outline: none;
     padding: 10px;
@@ -41,20 +46,23 @@ button{
     cursor: pointer;
 }
 
-button:hover{
+button:hover {
     background-color: #7c7c7c6b;
 }
 
-#search-img{
+#search-img {
     height: 20px;
 }
 
-div{
+div {
     margin-top: 15px;
 }
 
-h2{
+h2 {
     font-size: 28px;
 }
 
-
+p{
+    margin-top: 25px;
+    font-size: 28px;
+}
