--- a/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
+++ b/Projeto-de-Eventos/Previsão-do-Tempo/styles.css
@@ -32,6 +32,7 @@ input {
     padding: 10px;
     border-radius: 24px;
     font-size: 20px;
+    margin-bottom: 15px;
     background-color: #7c7c7c2b;
     width: calc(100% - 50px); /* Irá ocupar 100% do espaço disponivel, menos 50px (para dar um espaço do botão) */
 }
@@ -63,6 +64,10 @@ h2 {
 }
 
 p{
-    margin-top: 52px;
+    margin-top: 45px;
     font-size: 20px;
+}
+
+#description{
+    text-transform: capitalize;
 }
