--- a/Projeto-de-Eventos/Netflix-Replica/styles.css
+++ b/Projeto-de-Eventos/Netflix-Replica/styles.css
@@ -6,10 +6,6 @@
     font-family: sans-serif;
 }
 
-body {
-    background: black;
-}
-
 #top-container {
     background: url("./assets/background.jpeg");
     padding-bottom: 100px;
@@ -82,9 +78,45 @@ input::placeholder{
     font-weight: bold;
     border: none;
     border-radius: 5px;
-    
+    cursor: pointer;
 }
 
+#bottom-container{
+    background-color: black;
+    border-top: 10px solid #303030;
+    padding: 70px 0;
+}
 
+h2{
+    font-size: 50px;
+    text-align: center;
+}
+
+#question-button{
+    width: 800px;
+    height: 70px;
+    background-color: #303030;
+    border: 0;
+    font-size: 24px;
+    margin: 40px auto 0;
+    text-align: left;
+    padding: 0 24px;
+    display: block; /* alinhamento ao centro com auto só funciona quando o display é block, button tem como padrão in-line */
+    cursor: pointer;
+}
+
+#question-img{
+    float: right;
+    margin-top: 8px;
+    margin-right: 2px;
+}
+
+#answer-div{
+    width: 800px;
+    background-color: #303030;
+    margin: 3px auto;
+    padding: 24px; 
+    font-size: 24px;  
+}
 
 
